@@ -19,13 +19,24 @@ ext {
 	junitVersion = '5.10.1'
 }
 
-tasks.withType(JavaCompile).configureEach {
-	options.encoding = 'UTF-8'
-}
-
 application {
 	mainModule = 'io.github.wuerzburgtransportguide'
 	mainClass = 'io.github.wuerzburgtransportguide.App'
+
+	// Required as the interface ServiceFactory is not exported by com.gluonhq.attach.util
+	// But to register a service using the public api, the interface is required?
+	applicationDefaultJvmArgs = [
+		'--add-exports',
+		'com.gluonhq.attach.util/com.gluonhq.attach.util.impl=io.github.wuerzburgtransportguide'
+	]
+}
+
+compileJava {
+	options.encoding = 'UTF-8'
+	options.compilerArgs += [
+		'--add-exports',
+		'com.gluonhq.attach.util/com.gluonhq.attach.util.impl=io.github.wuerzburgtransportguide'
+	]
 }
 
 java {
@@ -48,6 +59,7 @@ dependencies {
 	implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
 	implementation 'com.google.code.gson:gson:2.10.1'
 	implementation 'com.gluonhq:maps:2.0.0-ea+6' exclude group: 'org.openjfx'
+	implementation 'com.gluonhq.attach:storage:4.0.19' exclude group: 'org.openjfx'
 	implementation 'jakarta.annotation:jakarta.annotation-api:3.0.0-M1'
 	implementation 'org.openapitools:jackson-databind-nullable:0.2.6'
 	implementation 'org.jetbrains:annotations:24.1.0'
